--- a/about.html
+++ b/about.html
@@ -34,12 +34,16 @@
 
     </div>
 
-    <img src="images/hiking.JPG" alt="hiking" class="hiking">
+    <img src="images/hiking.JPG" alt="hiking" class="hiking"> 
+
+    <div class="july">
+        In July 2022 we went on a family trip to Big Fork, Montana and went on a hike where we found snow!
+    </div>
 
 
-    <h2> Random Facts about Me</h2>
+    <hr>
 
-    <ul>
+    <ul class="facts">
         <li>I love flaming hot cheetos.</li>
         <li>When given the choice between sweet and savory, I choose savory.</li>
         <li></li>
