--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <div class="header"> Kenadi Fullmer.</div>
-    <div class="menu">
+    <div class="menu" id="buttons">
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="contact.html">CONTACT</a>
@@ -21,7 +21,6 @@
 
     <h1> Work Experience </h1>
     <hr>
-
     <div>
         
         <ul>
