--- a/about.html
+++ b/about.html
@@ -21,6 +21,13 @@
         <a href="contact.html">CONTACT</a>
         <a href="#">PORTFOLIO</a>
     </div>
+
+
+    <div class="typewriter">
+        <h2>A little bit about me...</h2>
+    </div>
+
+    <hr>
     
     <div class="container">
     
