--- a/about.html
+++ b/about.html
@@ -50,12 +50,13 @@
 
     <hr>
 
-    <ul class="facts">
-        <li>I love flaming hot cheetos.</li>
-        <li>When given the choice between sweet and savory, I choose savory.</li>
-        <li></li>
+    <div class="facts">
+        I love flaming hot cheetos.
+        When given the choice between sweet and savory, I choose savory.
+    </div>  
 
-    </ul>
+    <img src="images/wedding.jpg" alt="wedding" class="wedding">
+    
 
 </body>
 </html>
