--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
 </head>
 <body>
 
+    <div class="typewriter">
+        <h2>Best way to contact me.</h2>
+    </div>
+
     <div class="contact">
     <h1>Email:kenadi.fullmer@gmail.com </h1>
     <h1>Phone: 208-881-6610</h1>
