added images for slideshow

--- a/about.html
+++ b/about.html
@@ -41,6 +41,8 @@
 
     </div>
 
+<hr>
+
     <img src="images/hiking.JPG" alt="hiking" class="hiking"> 
 
     <div class="july">
@@ -52,10 +54,16 @@
 
     <div class="facts">
         I love flaming hot cheetos.
-        When given the choice between sweet and savory, I choose savory.
+        When given the choice between sweet and savory, I choose savory. I enjoy reading in my free time. In the warm months I like to go camping and hiking. In the summer we go paddle boarding with my in laws.
     </div>  
 
     <img src="images/wedding.jpg" alt="wedding" class="wedding">
+
+<hr>
+
+<img src="images/km1.jpg" class="mySlides">
+<img src="images/km2.jpg" class="mySlides">
+<img src="images/km3.jpg" class="mySlides">
     
 
 </body>
