--- a/index.html
+++ b/index.html
@@ -82,16 +82,18 @@
     <h1> My skills </h1>
         <hr>
 
-    <div>
-    <ul>
-        <div>
-        <li>Leadership</li>
-        <li>Microsoft Dynamics NAV</li>
-        <li> Communication</li> 
-        <li>Time mangament</li>
+        <div class="skills">
+            <div>
+                <h3>Leadership</h3>
+                <h3>Time Management</h3>
+                <h3>Microsoft Dynamics NAV</h3>
+            </div>
+            <div>
+                <h3> Communication</h3>
+                <h3>Problem Solving</h3>
+                <h3>Training</h3>
+            </div>
         </div>
-    </ul>
-    </div>
 
     <h1>Plans after Completing Tech-Moms </h1>
 
