--- a/index.html
+++ b/index.html
@@ -63,16 +63,18 @@
     <h1>Education</h1>
     <hr>
    <div class="high">
-    <div>Highschool Diploma</div>
+    <div class="rigby">Highschool Diploma</div>
     <div>Rigby Highschool </div>
-    <div>Location: Rigby, Idaho </div>
+    <div>Rigby, Idaho </div>
+    <div>May 2018</div>
     </div>
 
     <br>
     <div class="tech">
-        <div>Website Development Certification</div>
+        <div class="web">Website Development Certification</div>
         <div> Tech-Moms </div>
-        <div>Location: Ogden, Utah </div>
+        <div>Ogden, Utah </div>
+        <div>March 2023</div>
         
         <div class="cert">
             Completion of technical skills course in HTML, CSS, and JavaScript; introduction to cybersecurity, data analytics & reporting, product/project management, quality assurance, digital marketing, and UX/UI design; completed website development project.</div>
@@ -92,6 +94,10 @@
                 <h3> Communication</h3>
                 <h3>Problem Solving</h3>
                 <h3>Training</h3>
+             </div>
+            <div>
+                <h3>CSS</h3>
+                <h3>HTML</h3>
             </div>
         </div>
 
