added slide images

--- a/about.html
+++ b/about.html
@@ -51,6 +51,9 @@
 <img src="images/km1.jpg" class="mySlides">
 <img src="images/km2.jpg" class="mySlides">
 <img src="images/km3.jpg" class="mySlides">
+<img src="images/km4.jpg" class="mySlides">
+<img src="images/km5.jpg" class="mySlides">
+<img src="images/km6.jpg" class="mySlides">
     
 
 <script src="final.js"></script>
