added more about me

--- a/about.html
+++ b/about.html
@@ -35,7 +35,13 @@
         
     <div class="text">
     <div class="about">
-        My name is Kenadi Fullmer. I grew up in a small town in Idaho, called Menan. I come from a big tight nit family. I have 3 brothers, 3 sisters, 3 nephews, and 9 nieces. After I graduated high school in 2018 from Rigby High, I moved to Preston, Idaho. After living there for about a year I moved to Logan. I met my husband in December of 2019, we got married November of 2021. Currently I am a shift supervisor at Casper's Ice Cream and have been with them for just shy of 5 years. In my free time I enjoy spending time outside, going on hikes paddle boarding, spending time with my family in Idaho, and binge watching my favorite shows on Hulu with my husband.
+        My name is Kenadi Fullmer. I grew up in a small town in Idaho, called Menan. I come from a big tight nit family. I have 3 brothers, 3 sisters, 3 nephews, and 9 nieces. After I graduated high school in 2018 from Rigby High, I moved to Logan. I met my husband in December of 2019, we got married November of 2021. 
+        <br>
+        <br>
+        Currently I am a shift supervisor at Casper's Ice Cream and have been with them for just shy of 5 years. Since working there I have been able to work my way up from being on the production line, to a line lead, and then to a shift supervisor. I have learned so many things while working there that have helped me to develop leadership, communication, and time management skills. 
+        <br>
+        <br>
+         In my free time I enjoy spending time outside, going on hikes paddle boarding, spending time with my family in Idaho, and binge watching my favorite shows on Hulu with my husband.
     </div>
     </div>
 
