adjusted contact page

--- a/contact.html
+++ b/contact.html
@@ -20,18 +20,13 @@
 </head>
 <body>
 
-    <div class="typewriter">
-        <h2>Best way to contact me.</h2>
-    </div>
+  
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdGmCXt1JfkYaegtXf0TsxkUAbZKDgT5CPOi1xQp7oqxf0lbQ/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0" class="forms">Loading…</iframe>
 
     <div class="contact">
-    <h1>Email:kenadi.fullmer@gmail.com </h1>
-    <h1>Phone: 208-881-6610</h1>
-    <h1>Linkedin: <a href="https://www.linkedin.com/in/kenadi-fullmer"> Kenadi Fullmer</a></h1>
-    </div>
-
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdGmCXt1JfkYaegtXf0TsxkUAbZKDgT5CPOi1xQp7oqxf0lbQ/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+        <h1>Linkedin: <a href="https://www.linkedin.com/in/kenadi-fullmer"> Kenadi Fullmer</a></h1>
+        </div>
 
 
 </body>
