--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdGmCXt1JfkYaegtXf0TsxkUAbZKDgT5CPOi1xQp7oqxf0lbQ/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0" class="forms">Loading…</iframe>
 
 
-    <h1>Linkedin: <a href="https://www.linkedin.com/in/kenadi-fullmer"> Kenadi Fullmer</a></h1>
-        
-
-
 </body>
+
+<footer>
+ <a href="https://www.linkedin.com/in/kenadi-fullmer"><img src="images/LI-Logo.png" alt="linkedin" class="linkedin"></a>
+</footer>
 </html>
